--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -56,7 +56,7 @@
     --secondary-t-color: #f5f5f5; 
     --primary-p-color: #ffffff;
     --secondary-p-color: #ffffff;
-    --primary-b-color: #f5f5f5;
+    --primary-b-color: #ffffff;
     --primary-l-color: rgba(0, 0, 0, .25);
     --secondary-l-color: rgba(255, 255, 255, 0.25);
 
